# SuriHealth

./: .gitignore  CMakeLists.txt  README.md
include/: Appointment.hpp  Cardiologist.hpp  Consultation.hpp  Exam.hpp  GeneralPractitioner.hpp  MedicalRecord.hpp  Neurologist.hpp  Patient.hpp  Practitioner.hpp  TimeUtils.hpp
src/: Appointment.cpp  Cardiologist.cpp  Consultation.cpp  Exam.cpp  GeneralPractitioner.cpp  MedicalRecord.cpp  Neurologist.cpp  Patient.cpp  Practitioner.cpp  TimeUtils.cpp  main.cpp
